[package]
name = "query_map"
description = "VectorMap is a generic wrapper around HashMap<String, Vec<String>> to handle different transformations like URL query strings."
version = "0.5.0"
edition = "2018"
license = "MIT"
repository = "https://github.com/calavera/query-map-rs"
readme = "./README.md"
keywords = ["serde", "url"]
categories = ["web-programming", "parser-implementations", "encoding"]

[dependencies]
form_urlencoded = { version = "^1", optional = true }
serde_crate = { package = "serde", version = "^1", optional = true, features = [
    "rc",
] }
serde_derive = { version = "^1", optional = true }

[dev-dependencies]
serde_json = "^1"

[features]
default = []
serde = ["serde_crate", "serde_derive"]
url-query = ["form_urlencoded"]
